part2/confs/manifests/one-dc.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: first-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: first
  template:
    metadata:
      labels:
        app: first
    spec:
      containers:
      - name: first-app
        image: hashicorp/http-echo
        args:
        - "-text=Hello, I'm first app"
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 5678

---

kind: Service
apiVersion: v1
metadata:
  name: first-app-service
spec:
  selector:
    app: first
  ports:
    - port: 5678
