part2/confs/manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-for-part2
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: app1.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: first-app-service
              port: 
                number: 5678
  - host: app2.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: second-app-service
              port: 
                number: 5678
  - host: app3.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: third-app-service
              port: 
                number: 5678
  - http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: third-app-service
              port:  
                number: 5678
